# obs-chapter-marker-manager

./: CHANGELOG.md  CMakeLists.txt  README.md  annotation-dock.cpp  annotation-dock.hpp  buildspec.json  chapter-marker-dock.cpp  chapter-marker-dock.hpp  constants.hpp  resources.qrc  streamup-record-chapter-manager.cpp  streamup-record-chapter-manager.hpp  streamup-record-chapter-manager.rc
.github/scripts/utils.zsh/: check_packages
.github/workflows/: build.yml
data/locale/: en-US.ini
